--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
   VITE_storageBucket=mari-shapnogor.firebasestorage.app
   VITE_messagingSenderId=410364200119
   VITE_appId=1:410364200119:web:93f8f515de637028c37932
+  VITE_image_host_key=9060899d18c13bb2827d1d5e89045c6f
